<resources>
    <string name="app_name">Movie Catalog</string>

    <string name="title_home">Home</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>
    <string name="title_favorite">Favorite</string>

    <string name="settings_menu">Settings</string>
    <string name="icon_txt_lang">Change Language</string>
    <string name="icon_txt_search">Search</string>
    <string name="icon_txt_reminder">Reminder</string>
    <string name="lbl_duration">0h 0m</string>
    <string name="lbl_ratings">0.0</string>
    <string name="lbl_sinopsis">Synopsis</string>
    <string name="lbl_tab_movie">Movie</string>
    <string name="lbl_tab_tv_show">Tv Show</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_year">2019</string>
    <string name="dialog_title">Choose Language</string>
    <string name="del_favorite">Delete</string>
    <string name="msg_delete_success">Success! deleted item.</string>
    <string name="msg_delete_failed">Failed! deleted item.</string>
    <string name="msg_favorite_success">add to favorite</string>
    <string name="msg_favorite_failed">Failed to add favorite</string>

    <!-- DIALOG FAVORIT -->
    <string name="titleDialog">Delete Favorite</string>
    <string name="messageDialog">Are you soure to delete this item ?</string>
    <string name="positiveButtonLabel">Yes</string>
    <string name="negativeButtonLabel">No</string>


    <!-- FRAGMENT DEFAULT TEXT -->
    <string name="hello_movie_fragment">Hello Movie Fragment</string>
    <string name="hello_tv_fragment">Hello TV Show fragment</string>
    <string name="hello_favorite_fragment">Hello Favorite fragment</string>

    <!-- URL API Configuration -->
    <string name="URL_MOVIE">https://api.themoviedb.org/3/discover/movie?api_key=</string>
    <string name="URL_TV">https://api.themoviedb.org/3/discover/tv?api_key=</string>
    <string name="path_thumbnail">https://image.tmdb.org/t/p/w185/</string>
    <string name="path_poster">https://image.tmdb.org/t/p/w780/</string>
    <string name="icon_favorite">Favorite</string>
    <string name="search_hint">Input Title</string>


</resources>
