<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_thumbnail"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:scaleType="fitXY" />

        <!-- TextView Years -->
        <TextView
            android:id="@+id/txt_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/img_thumbnail"
            android:text="@string/lbl_year"/>

        <!-- TextView Title -->
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/txt_year"
            android:layout_toRightOf="@id/img_thumbnail"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lbl_title"/>

        <!-- TextView Ratings -->
        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/img_thumbnail"
            android:layout_alignBottom="@+id/img_thumbnail"
            android:padding="6dp"
            android:layout_margin="2dp"
            android:background="@color/colorAccent"
            android:textColor="#fff"
            android:textSize="6pt"
            android:text="@string/lbl_ratings"/>

        <!-- TextView Sinopsis -->
        <TextView
            android:id="@+id/txt_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/txt_title"
            android:layout_toRightOf="@id/img_thumbnail"
            android:text="@string/lbl_sinopsis"
            android:ellipsize="end"
            android:maxLines="2"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>